Refactor: Improve project structure and add new features
This commit includes several changes to improve the project structure
and add new features. The .gitignore file was updated to ignore
unnecessary files. A new pyproject.toml file was added to replace
setup.py for modern Python packaging. The autoconf.py file was added
with functions to modify YAML files. The config.yaml file was updated
with new configurations. The models.py file was refactored to improve
the class structure. The viewer.py file was updated to include more features.
Several files were moved to the widgets directory to improve the project
 structure. The widgets.py file was updated to remove the InteractiveTab
 class, which was moved to its own file.

--- a/sst_gui/config.yaml
+++ b/sst_gui/config.yaml
@@ -6,16 +6,19 @@ gatevalves:
     group: ucal
     label: "Upstream Photon Shutter"
   psh1:
-    _target_: modelFromOphyd
     prefix: psh1
     group: ucal
     label: "Front End Photon Shutter"
 ringstatus:
   _default:
     _target_: sst_gui.loaders.modelFromOphyd
+  current:
+    prefix: ring_current
 misc:
   manipulator:
     _target_: sst_gui.loaders.modelFromOphyd
     prefix: manipulator
     group: ucal
     label: "Manipulator"
+  bl_control:
+    prefix: sst_control
