Refactor and Update Models and Widgets
This commit includes several updates and refactoring changes to improve code readability and maintainability.

1. The modify_yaml function has been fixed and tested.
2. The modelFromOphyd function has been updated to accept a modelClass parameter and use it to create the model.
3. The pvFromOphyd, gvFromOphyd, and motorFromOphyd functions have been updated to use the modelFromOphyd function with the appropriate modelClass.
4. The energyModelFromOphyd function has been updated to create the EnergyModel with the correct parameters.
5. The viewer.py has been refactored to use BeamlineModel for beamline control.
6. The gatevalve.py has been updated to use ByteIndicator instead of OphydByteIndicator. The GVControl now inherits from GVMonitor and uses ByteIndicator.
7. The motor.py has been updated to use ByteIndicator instead of OphydByteIndicator, and to use signals and slots to update the position and indicator. The MotorControl now inherits from MotorMonitor and uses the model's position.
8. The ByteIndicator class has been implemented to replace OphydByteIndicator. The new class is a QWidget that can be used to display a color indicator.

These changes aim to improve the overall structure and functionality of the code.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,16 +9,14 @@ authors = [
     { email = "ctitus@bnl.gov" },
 ]
 requires-python = ">=3.7"
+dependencies = ["bluesky_widgets", "qtpy"]
 
 [project.urls]
 homepage = "https://github.com/NSLS-II-SST/sst-gui"  # Replace with your project's homepage
 
 [project.scripts]
 sst-gui = "sst_gui.main:main"
-sst-convert-config = "sst_gui.autoconf:convert_config"
-
-[project.dependencies]
-bluesky_widgets = "*"
-qtpy = "*"
+sst-convert-config = "sst_gui.autoconf:main"
+sst-gui-test = "sst_gui.testScaffolding:main"
 
 [project.optional-dependencies]
