Added new modules and features to the SST GUI application. Major changes include:
- Added confEdit.py, mainWidget.py, and views.py to the repository. These new modules introduce significant functionality to the application.
- Introduced the ConfigEditor class in confEdit.py, which provides a GUI for editing the configuration file.
- Moved the QtViewer class into mainWidget.py and enhanced it to be able to edit and reload configuration.
- views.py, introduces the AutoControlBox and AutoMonitorBox classes, which provide a control interface and a monitoring interface for groups of models.
- AutoControlBox and AutoMonitorBox also allow individual models to be hidden to provide a cleaner interface.
- Introduced the AutoMonitor and AutoControl functions in views.py to automatically create the appropriate monitor or control for a given model.
- Updated various models and widgets to improve functionality and user experience.

These changes significantly enhance the application's capabilities and user interface, providing a more robust and user-friendly tool for beamline control and monitoring.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,6 @@ homepage = "https://github.com/NSLS-II-SST/sst-gui"  # Replace with your project
 sst-gui = "sst_gui.main:main"
 sst-convert-config = "sst_gui.autoconf:main"
 sst-gui-test = "sst_gui.testScaffolding:main"
+sst-edit-config = "sst_gui.confEdit:main"
 
 [project.optional-dependencies]
