PlanTab created, debugged, and working with xas, move, and scan plan builders

--- a/sst_gui/test_config.yaml
+++ b/sst_gui/test_config.yaml
@@ -80,6 +80,7 @@ shutters:
   psh10:
     label: Upstream Photon Shutter
     prefix: psh10
+    visible: true
   psh4:
     label: Hutch Photon Shutter
     prefix: psh4
