--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
     { email = "ctitus@bnl.gov" },
 ]
 requires-python = ">=3.7"
-dependencies = ["bluesky_widgets", "qtpy"]
+dependencies = ["bluesky_widgets", "qtpy", "ucal", "sst_base", "sst_funcs"]
 
 [project.urls]
 homepage = "https://github.com/NSLS-II-SST/sst-gui"  # Replace with your project's homepage
